se adapto y dio estilos al formulario login y se redirecciona a la vista de administracion

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
-  
+  {% block css %}
+  {% endblock%}
+
+  {% block js %}
+  {% endblock%}
   
 	<title>{% block title %}{% endblock %}</title>
 </head>
@@ -53,7 +57,7 @@
   	
   	{% include 'div_animado.html' %}
 
-    {% block content %}
+    {% block content1 %}
     {% endblock %}
   	
 
