--- a/templates/Login/index_login.html
+++ b/templates/Login/index_login.html
@@ -1,10 +1,37 @@
 {% extends 'base.html' %}
 
-{% block content %}
-	<form method="POST" >
-		{% csrf_token %}
-		{{ form.as_p }}
+{% block css %}
+	<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
+	<link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
+	<meta name="robots" content="NONE,NOARCHIVE">
+{% endblock %}
 
-		<input type="submit" name="enviar" value="Eviar">
-	</form>
+{% block content1 %}
+
+<div id="content" class="colM" style="text-align: center;">
+
+
+<!-- cabecera!-->
+	<div id="header" style="height: auto;">
+        <div id="branding">
+			<h1 id="site-name">Acceder al panel administrador</h1>
+        </div>
+    </div>
+
+	<div id="content-main">
+
+		<form method="POST" >
+			{% csrf_token %}
+			{{ form.as_p }}
+
+			<div class="submit-row">
+    			<label>&nbsp;</label><input type="submit" value="Log in">
+  			</div>
+		</form>
+	</div>       
+        <br class="clear">
+</div>
+
 {% endblock %}
