--- a/templates/nav_top_main.html
+++ b/templates/nav_top_main.html
@@ -2,6 +2,22 @@
   <header>
     <!-- header-area start -->
     <div id="sticker" class="header-area">
+        <!-- Verificacion de autenticacion -->
+        <div style="margin: 0; padding: 0; float: left;">
+          <div style="">
+
+                {% block verificar_login%}
+                  {% if user.is_authenticated %}
+                    <span class="" style="color: white;">Hola {{user.username}}</span>
+                    </br>
+                    <a style="color: white;" href="/admin/logout/">Log out</a>
+                  {% else %}
+                    <span class=""><a style="color: white;" href="/login">Ingresar</a></span>
+                  {% endif %}
+                {% endblock %}
+          
+          </div>
+        </div>
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12">
@@ -15,6 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
+                
                 <!-- Brand -->
                 <a class="navbar-brand page-scroll sticky-logo" href="index.html">
                   <h1><span>e</span>Business</h1>
@@ -57,4 +74,3 @@
     <!-- header-area end -->
   </header>
   <!-- header end -->
-	
