--- a/templates/ExAlumnos/inicio_exalumnos.html
+++ b/templates/ExAlumnos/inicio_exalumnos.html
@@ -1,1 +1,8 @@
 {% extends 'base.html' %}
+
+{% load staticfiles %}
+
+
+{% block testimonios %}
+      {% include 'testimonios/testimonios.html' %}
+{% endblock %}
