--- a/templates/Testimonios/testimonios_all.html
+++ b/templates/Testimonios/testimonios_all.html
@@ -3,27 +3,10 @@
 
 {%  block testimonios %}
 
-  <!-- Start Bottom Header -->
-  <div class="header-bg page-area">
-    <div class="home-overly"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="slider-content text-center">
-            <div class="header-bottom">
-              <div class="layer2 wow zoomIn" data-wow-duration="1s" data-wow-delay=".4s">
-                <h1 class="title2">My Blog</h1>
-              </div>
-              <div class="layer3 wow zoomInUp" data-wow-duration="2s" data-wow-delay="1s">
-                <h2 class="title3">Profesional Blog Page</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- END Header -->
+<!-- Start contenedor principal -->
+
+<div id="blog">
+
   <div class="blog-page area-padding">
     <div class="container">
       <div class="row">
@@ -354,5 +337,9 @@
   <!-- End Blog Area -->
 
   <div class="clearfix"></div>
+
+</div>
+<!-- End contenedor principal -->
+
 
 {% endblock %}
