--- a/templates/nav_top_main.html
+++ b/templates/nav_top_main.html
@@ -33,7 +33,7 @@
                   </button>
                 
                 <!-- Brand -->
-                <a class="navbar-brand page-scroll sticky-logo" href="index.html">
+                <a class="navbar-brand page-scroll sticky-logo" href="/index">
                   <h1><span>e</span>Business</h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
                   <!-- <img src="img/logo.png" alt="" title=""> -->
