--- a/templates/Testimonios/testimonios_all.html
+++ b/templates/Testimonios/testimonios_all.html
@@ -26,143 +26,16 @@
             </div>
             <div class="single-blog-page">
               <!-- recent start -->
-              <div class="left-blog">
-                <h4>recent post</h4>
-                <div class="recent-post">
-                  <!-- start single post -->
-                  <div class="recent-single-post">
-                    <div class="post-img">
-                      <a href="#">
-												   <img src="img/blog/1.jpg" alt="">
-												</a>
-                    </div>
-                    <div class="pst-content">
-                      <p><a href="#"> Redug Lerse dolor sit amet consect adipis elit.</a></p>
-                    </div>
-                  </div>
-                  <!-- End single post -->
-                  <!-- start single post -->
-                  <div class="recent-single-post">
-                    <div class="post-img">
-                      <a href="#">
-												   <img src="img/blog/2.jpg" alt="">
-												</a>
-                    </div>
-                    <div class="pst-content">
-                      <p><a href="#"> Redug Lerse dolor sit amet consect adipis elit.</a></p>
-                    </div>
-                  </div>
-                  <!-- End single post -->
-                  <!-- start single post -->
-                  <div class="recent-single-post">
-                    <div class="post-img">
-                      <a href="#">
-												   <img src="img/blog/3.jpg" alt="">
-												</a>
-                    </div>
-                    <div class="pst-content">
-                      <p><a href="#"> Redug Lerse dolor sit amet consect adipis elit.</a></p>
-                    </div>
-                  </div>
-                  <!-- End single post -->
-                  <!-- start single post -->
-                  <div class="recent-single-post">
-                    <div class="post-img">
-                      <a href="#">
-												   <img src="img/blog/4.jpg" alt="">
-												</a>
-                    </div>
-                    <div class="pst-content">
-                      <p><a href="#"> Redug Lerse dolor sit amet consect adipis elit.</a></p>
-                    </div>
-                  </div>
-                  <!-- End single post -->
-                </div>
-              </div>
               <!-- recent end -->
             </div>
             <div class="single-blog-page">
-              <div class="left-blog">
-                <h4>categories</h4>
-                <ul>
-                  <li>
-                    <a href="#">Portfolio</a>
-                  </li>
-                  <li>
-                    <a href="#">Project</a>
-                  </li>
-                  <li>
-                    <a href="#">Design</a>
-                  </li>
-                  <li>
-                    <a href="#">wordpress</a>
-                  </li>
-                  <li>
-                    <a href="#">Joomla</a>
-                  </li>
-                  <li>
-                    <a href="#">Html</a>
-                  </li>
-                  <li>
-                    <a href="#">Website</a>
-                  </li>
-                </ul>
-              </div>
+              
             </div>
             <div class="single-blog-page">
-              <div class="left-blog">
-                <h4>archive</h4>
-                <ul>
-                  <li>
-                    <a href="#">07 July 2016</a>
-                  </li>
-                  <li>
-                    <a href="#">29 June 2016</a>
-                  </li>
-                  <li>
-                    <a href="#">13 May 2016</a>
-                  </li>
-                  <li>
-                    <a href="#">20 March 2016</a>
-                  </li>
-                  <li>
-                    <a href="#">09 Fabruary 2016</a>
-                  </li>
-                </ul>
-              </div>
+              
             </div>
             <div class="single-blog-page">
-              <div class="left-tags blog-tags">
-                <div class="popular-tag left-side-tags left-blog">
-                  <h4>popular tags</h4>
-                  <ul>
-                    <li>
-                      <a href="#">Portfolio</a>
-                    </li>
-                    <li>
-                      <a href="#">Project</a>
-                    </li>
-                    <li>
-                      <a href="#">Design</a>
-                    </li>
-                    <li>
-                      <a href="#">Website</a>
-                    </li>
-                    <li>
-                      <a href="#">Joomla</a>
-                    </li>
-                    <li>
-                      <a href="#">Html</a>
-                    </li>
-                    <li>
-                      <a href="#">wordpress</a>
-                    </li>
-                    <li>
-                      <a href="#">Masonry</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
+              
             </div>
           </div>
         </div>
@@ -178,18 +51,15 @@
               		  <div class="single-blog-img">
               		  <H4 >Testiomonio</H4>
               		    <a href="blog-details.html">
-                  			<iframe onload="var uri = this.getAttribute('src');uri = uri.split('https://www.youtube.com/watch?v=');if(uri.length >0){ uriFinal = 'https://www.youtube.com/embed/'+uri;}; this.setAttribute('src',uriFinal);setAttribute('onload','');"  width="560" height="315"  
-                  				src="{{ testi.video }}" poster="presentacion.jpg" controls>
+              		    {% load my_templatetag %}
+                  			<iframe src="{{ testi.video|embebido_uris }}" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                   			</iframe>
+                  			
 						</a>
               		  </div>
                		 <div class="blog-meta">
-              		    <span class="comments-type">
-											<i class="fa fa-comment-o"></i>
-											<a href="#">11 comments</a>
-										</span>
               		    <span class="date-type">
-											<i class="fa fa-calendar"></i>2016-03-05 / 09:10:16
+											<i class="fa fa-calendar"></i>{{ testi.fecha_hora.date }} {{ testi.fecha_hora.time }}
 										</span>
                		 </div>
               		  <div class="blog-text">
