--- a/templates/nav_top_main.html
+++ b/templates/nav_top_main.html
@@ -1,4 +1,6 @@
 
+{% load staticfiles %}
+  
   <header>
     <!-- header-area start -->
     <div id="sticker" class="header-area">
@@ -36,7 +38,7 @@
                 <a class="navbar-brand page-scroll sticky-logo" href="/index">
                   <h1><span>e</span>Business</h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
-                  <!-- <img src="img/logo.png" alt="" title=""> -->
+                  <!-- <img src="{% static 'img/logo.png' %}" alt="" title=""> -->
                 </a>
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
