--- a/templates/nav_top_main.html
+++ b/templates/nav_top_main.html
@@ -48,7 +48,7 @@
                     <a class="page-scroll" href="#home">{{ STATIC_URL }}Home</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#blog">Ex Alumnos</a>
+                    <a id="link_exalumnos" class="page-scroll" href="#blog">Ex Alumnos</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#services">Academia</a>
