Se creola vista para el usuario del modulo academias, en donde cada ietem redirecciona a las cuatro opciones informativas

--- a/templates/ExAlumnos/inicio_exalumnos.html
+++ b/templates/ExAlumnos/inicio_exalumnos.html
@@ -6,3 +6,7 @@
 {% block testimonios %}
       {% include 'testimonios/testimonios.html' %}
 {% endblock %}
+
+{% block academia %}
+      {% include 'academia/list_menu_academia.html' %}
+{% endblock %}
