--- a/templates/nav_top_main.html
+++ b/templates/nav_top_main.html
@@ -51,13 +51,13 @@
                     <a id="link_exalumnos" class="page-scroll" href="#blog">Ex Alumnos</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#services">Academia</a>
+                    <a class="page-scroll" href="#portfolio">Academia</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#team">Eventos</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#portfolio">Grupo de Investigación / Clubes Estudiantiles</a>
+                    <a class="page-scroll" href="#services">Grupo de Investigación / Clubes Estudiantiles</a>
                   </li>
 
                   <li>
