--- a/templates/nav_top_main.html
+++ b/templates/nav_top_main.html
@@ -51,7 +51,7 @@
                     <a id="link_exalumnos" class="page-scroll" href="#blog">Ex Alumnos</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#portfolio">Academia</a>
+                    <a id ="link_academia" class="page-scroll" href="#portfolio">Academia</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#team">Eventos</a>
