--- a/templates/academia/list_fechas_importantes.html
+++ b/templates/academia/list_fechas_importantes.html
@@ -17,102 +17,37 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Academia</h2>
+            <h2>Fechas Academicas Importantes</h2>
           </div>
         </div>
       </div>
       <div class="row">
         <!-- Start Portfolio -page -->
-        <div class="awesome-project-1 fix">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="awesome-menu ">
-              <ul class="project-menu">
-                <li>
-                  <a href="#" class="" data-filter="*">Fechas Academicas Importantes</a>
-                </li>
-                <li>
-                  <a href="#" data-filter=".development">Informcion de la malla Curricular</a>
-                </li>
-                <li>
-                  <a href="#" data-filter=".design">Materias abiertas en período extraordinario</a>
-                </li>
-                <li>
-                  <a href="#" data-filter=".photo">Autoridades de la carrera</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        
         <div class="awesome-project-content">
-          <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-3 col-xs-12 design development">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="{% static 'img/academia/fechas.jpg' %}" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/1.jpg">
-                      <h4>Fechas Academicas Importantes</h4>
-                      <span>Sudamericano</span>
-                    </a>
+          {% if fechas_importantes_all %}
+
+            <!-- single-awesome-project start -->
+            <div class="col-md-3 col-sm-3 col-xs-12 design development">
+              <div class="single-awesome-project">
+                <div class="awesome-img">
+                  <a href="#"><img src="{% static 'img/academia/fechas.jpg' %}" alt="" /></a>
+                  <div class="add-actions text-center">
+                    <div class="project-dec">
+                      <a class="venobox" data-gall="myGallery" href="img/portfolio/1.jpg">
+                        <h4>Fechas Academicas Importantes</h4>
+                        <span>Sudamericano</span>
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-3 col-xs-12 photo">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="{% static 'img/academia/mallas.jpg' %}" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/2.jpg">
-                      <h4>Informcion de la malla Curricular</h4>
-                      <span>Sudamericano</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-3 col-xs-12 design">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="{% static 'img/academia/materiasAbierta.jpg' %}" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/3.jpg">
-                      <h4>Materias abiertas en período extraordinario</h4>
-                      <span>Sudamericano</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-3 col-xs-12 photo development">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="{% static 'img/academia/autoridades.jpg' %}" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/4.jpg">
-                      <h4>Autoridades de la carrera</h4>
-                      <span>Sudamericano</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-         
+            <!-- single-awesome-project end -->
+          {% else %}
+            <div style="text-align:center;" class="col-md-12"><h2>No Hay Resultados </h2></div>
+          {% endif %}
+
         </div>
       </div>
     </div>
