Se crea la seccion de malla actual a reflejar falta colocar la malla con sus ciclos y materias

--- a/templates/academia/list_menu_academia.html
+++ b/templates/academia/list_menu_academia.html
@@ -22,7 +22,7 @@
                   <a href="/get_fechas_importantes_all" class="" data-filter="*">Fechas Academicas Importantes</a>
                 </li>
                 <li>
-                  <a href="#" data-filter=".development">Informacion de la malla Curricular</a>
+                  <a href="/get_malla_actual" data-filter=".development">Informacion de la malla Curricular</a>
                 </li>
                 <li>
                   <a href="#" data-filter=".design">Materias abiertas en período extraordinario</a>
@@ -59,7 +59,7 @@
                 <a href="#"><img src="{% static 'img/academia/mallas.jpg' %}" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/2.jpg">
+                    <a class="venobox" data-gall="myGallery" href="/get_malla_actual">
                       <h4>Informacion de la malla Curricular</h4>
                       <span>Sudamericano</span>
                     </a>
