--- a/templates/academia/malla/malla_details.html
+++ b/templates/academia/malla/malla_details.html
@@ -4,7 +4,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">MAlla {{ malla_actual.nombre }}</h4>
+          <h4 class="modal-title">Malla {{ malla_actual.nombre }}</h4>
         </div>
         <div class="modal-body">
           <h5> 
@@ -18,6 +18,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <a href="/get_info_malla_by_ciclo/{{ malla_actual.id }}" class="btn btn-primary" >Ver Malla</a>
         </div>
       </div>
       
